refactored nav events

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Coding Latam es una comunidad donde puedes compartir, aprender y mejorar tus dev skills a través de la comunicación y mentoría con otros devs de la industria"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -50,9 +50,10 @@
       href="../images/favicon-16x16.png"
     />
     <title>Coding Latam | Comunidad de desarrolladores</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-169146435-1"
+      src="https://www.googletagmanager.com/gtag/js?id=UA-176011676-1"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -61,10 +62,11 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "UA-169146435-1");
+      gtag("config", "UA-176011676-1");
     </script>
+
     <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <!-- <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-app.js"></script> -->
+    <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-app.js"></script>
     <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
     <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-analytics.js"></script>
