--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,10 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/ef8cd064e6.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       rel="apple-touch-icon"
       sizes="120x120"
